--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meeting Recorder + Summarizer</title>
+    <title>Summary of MoM by Dimas</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
@@ -115,7 +115,7 @@
               method: "POST",
               headers: {
                 Authorization:
-                  "Bearer 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",
+                  "Bearer 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",
                 Referer: "https://www.sitename.com",
                 "X-Title": "SiteName",
                 "Content-Type": "application/json",
