--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Summary From Audio</title>
+    <title>Meeting Recorder + Summarizer</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
@@ -14,7 +14,7 @@
       }
       #transcript,
       #summary {
-        margin-top: 20px;
+        margin-top: 5px;
         padding: 5px;
         border: 1px solid #ccc;
         min-height: 120px;
@@ -145,9 +145,9 @@
               method: "POST",
               headers: {
                 Authorization:
-                  "Bearer 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",
-                Referer: "https://www.sitename.com",
-                "X-Title": "SiteName",
+                  "Bearer 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",
+                Referer: "https://apriansyah-dimas.github.io/Summary/",
+                "X-Title": "Summary From Audio",
                 "Content-Type": "application/json",
               },
               body: JSON.stringify({
