--- a/index.html
+++ b/index.html
@@ -8,41 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <style>
-      body {
-        background-color: #f4f6f9;
-      }
-      #transcript,
-      #summary {
-        margin-top: 5px;
-        padding: 5px;
-        border: 1px solid #ccc;
-        min-height: 120px;
-        background-color: #fff;
-        white-space: pre-wrap;
-      }
-      #transcript h3,
-      #summary h3 {
-        color: #333;
-        font-size: 1.2em;
-      }
-      .blinking {
-        animation: blinkingText 1.2s infinite;
-        color: red;
-        font-weight: bold;
-      }
-      @keyframes blinkingText {
-        0% {
-          opacity: 1;
-        }
-        50% {
-          opacity: 0;
-        }
-        100% {
-          opacity: 1;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container mt-4">
@@ -65,117 +31,6 @@
       <div id="summary">(Belum ada ringkasan)</div>
     </div>
 
-    <script>
-      const startBtn = document.getElementById("startBtn");
-      const stopBtn = document.getElementById("stopBtn");
-      const summarizeBtn = document.getElementById("summarizeBtn");
-      const transcriptDiv = document.getElementById("transcript");
-      const summaryDiv = document.getElementById("summary");
-      const statusDiv = document.getElementById("status");
-
-      let recognition;
-      let finalTranscript = "";
-
-      if ("webkitSpeechRecognition" in window) {
-        recognition = new webkitSpeechRecognition();
-        recognition.continuous = true;
-        recognition.interimResults = true;
-        recognition.lang = "id-ID";
-
-        recognition.onresult = (event) => {
-          let interimTranscript = "";
-          for (let i = event.resultIndex; i < event.results.length; ++i) {
-            if (event.results[i].isFinal) {
-              finalTranscript += event.results[i][0].transcript + "\n";
-            } else {
-              interimTranscript += event.results[i][0].transcript;
-            }
-          }
-          transcriptDiv.textContent = finalTranscript + interimTranscript;
-        };
-
-        recognition.onerror = (event) => {
-          console.error("Speech recognition error", event);
-          statusDiv.innerHTML = `<span class="text-danger">Error dalam perekaman suara: ${event.error}</span>`;
-        };
-
-        recognition.onend = () => {
-          finalTranscript = transcriptDiv.textContent.trim();
-          statusDiv.innerHTML = `<span class="text-muted">Perekaman berhenti.</span>`;
-        };
-      } else {
-        alert("Browser Anda tidak mendukung Speech Recognition.");
-      }
-
-      startBtn.addEventListener("click", () => {
-        if (recognition) {
-          finalTranscript = "";
-          transcriptDiv.textContent = "";
-          summaryDiv.innerHTML = "(Belum ada ringkasan)";
-          recognition.start();
-          startBtn.disabled = true;
-          stopBtn.disabled = false;
-          summarizeBtn.disabled = true;
-          statusDiv.innerHTML = `<span class="blinking">Merekam...</span>`;
-        }
-      });
-
-      stopBtn.addEventListener("click", () => {
-        if (recognition) {
-          recognition.stop();
-          startBtn.disabled = false;
-          stopBtn.disabled = true;
-          summarizeBtn.disabled = false;
-        }
-      });
-
-      summarizeBtn.addEventListener("click", async () => {
-        const textToSummarize = finalTranscript.trim();
-        if (!textToSummarize) {
-          alert("Tidak ada teks untuk dirangkum.");
-          return;
-        }
-
-        summaryDiv.innerHTML = "Sedang membuat ringkasan...";
-
-        try {
-          const response = await fetch(
-            "https://openrouter.ai/api/v1/chat/completions",
-            {
-              method: "POST",
-              headers: {
-                Authorization:
-                  "Bearer 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",
-                Referer: "https://apriansyah-dimas.github.io/Summary/",
-                "X-Title": "Summary From Audio",
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({
-                model: "deepseek/deepseek-r1:free",
-                messages: [
-                  {
-                    role: "system",
-                    content:
-                      "Anda adalah asisten yang membantu meringkas transkrip meeting menjadi poin-poin penting.",
-                  },
-                  {
-                    role: "user",
-                    content: `Ringkaskan teks berikut menjadi poin-poin penting:\n\n${textToSummarize}`,
-                  },
-                ],
-              }),
-            }
-          );
-
-          const data = await response.json();
-          console.log(data);
-          const markdownText =
-            data.choices?.[0]?.message?.content || "Tidak ada ringkasan.";
-          summaryDiv.innerHTML = marked.parse(markdownText);
-        } catch (error) {
-          summaryDiv.innerHTML = "Error: " + error.message;
-        }
-      });
-    </script>
+    <script src="main.js"></script>
   </body>
 </html>
